--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <a href="recipes/palak-paneer.html">
+        Click here for instructions to make <strong><em>Palak Paneer</em></strong>
+    </a>
     
 </body>
 </html>
