New recipes added Recipes for Palak Paneer, Paneer Tikka Masala and Paneer Butter Masala were added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="recipes/palak-paneer.html">
+    <ul>
+    <li><a href="recipes/palak-paneer.html" target="_blank">
         Click here for instructions to make <strong><em>Palak Paneer</em></strong>
-    </a>
+    </a></li>
+    <li><a href="recipes/paneer-butter-masala.html" target="_blank">
+        Click here for instructions to make <strong><em>Paneer Butter Masala</em></strong>
+    </a></li>
+    <li><a href="recipes/paneertikkamasala.html" target="_blank">
+        Click here for instructions to make <strong><em>Paneer Tikka Masala</em></strong>
+    </a></li>
+
+    </ul>
     
 </body>
 </html>
