--- a/recipes/palak-paneer.html
+++ b/recipes/palak-paneer.html
@@ -7,5 +7,52 @@
 </head>
 <body>
     <h1>Palak Paneer</h1>
+    <img src="https://www.allrecipes.com/thmb/GbeMLxrmiiv-cSv3A4vP2QnQJMw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8211267-9a0db1fff33847f19bee1ab386d24bce.jpg" 
+    alt="Palak Paneer" width="400" height="400">
+    <h2>Description</h2>
+        <p>Palak paneer or palak chhena is an Indian dish consisting of chhena or paneer in a thick paste made from puréed spinach, called palak in Hindi, Marathi, Gujarati, and other Indian languages. 
+        The terms palak chhena and saag chhena are sometimes used interchangeably in restaurants in the Anglosphere.</p>
+        <h2>Indgredients</h2>
+        <ul>
+            <li>cooking spray</li>
+            <li>½ pound paneer, cubed</li>
+            <li>2 tablespoons canola oil, divided</li>
+            <li>1 teaspoon cumin seeds</li>
+            <li>1 ½ cups water</li>
+            <li>1 (10 ounce) package fresh spinach</li>
+            <li>1 large tomato, diced</li>
+            <li>3 cloves garlic</li>
+            <li>2 dried red chile peppers, or to taste</li>
+            <li>1 tablespoon chopped fresh ginger root</li>
+            <li>1 teaspoon curry powder</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>1 teaspoon ground turmeric</li>
+            <li>1 pinch salt to taste</li>
+        </ul>
+
+        <h2>
+            Steps to make <em>Palak Paneer</em></h2>
+            <ol>
+            <li>Heat a skillet coated with cooking spray over medium heat;
+             fry paneer cubes until lightly browned on each side, about 5 minutes. Transfer paneer to a bowl.</li>
+
+            <li>Heat 1 tablespoon canola oil in the same skillet used to cook paneer over medium heat. Add cumin seeds and cook until seeds are slightly red. Stir water, spinach, tomato, garlic, chile peppers, ginger, curry powder, ground coriander, and ground turmeric into cumin seeds. Season with salt.</li>
+                
+            <li>
+                Bring spinach mixture to a boil and simmer until garlic is very soft, 15 to 20 minutes. Remove from heat and allow mixture to cool.
+            </li>
+            
+            <li>
+                Transfer spinach mixture to a blender or food processor; puree until smooth.
+            </li>
+
+            <li>Heat remaining 1 tablespoon canola oil in a saucepan over medium heat; add spinach puree and paneer cubes. Simmer until hot, about 5 minutes.</li>
+            </ol>
+
 </body>
+<footer>
+    <a href="../index.html">
+        Browse other Recipes
+    </a>
+</footer>
 </html>
